force-app/main/default/objects/Operational_Data__c/Operational_Data__c.object-meta.xml
<CustomObject>
    <label>Division Info</label>
    <nameField>
        <label>Division Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Division Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>