force-app/main/default/objects/Operational_Data__c/fields/After_Hours_Phone__c.field-meta.xml
<CustomField>
    <fullName>After_Hours_Phone__c</fullName>
    <label>After Hours Phone</label>
    <type>Phone</type>
</CustomField>