force-app/main/default/objects/Operational_Data__c/fields/CSC_Director__c.field-meta.xml
<CustomField>
    <fullName>CSC_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSC Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Division_Info</relationshipName>
    <type>Lookup</type>
</CustomField>