force-app/main/default/objects/Operational_Data__c/fields/CSC_Info_Contact_for_Updates__c.field-meta.xml
<CustomField>
    <fullName>CSC_Info_Contact_for_Updates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact this user to request updates to this information.</inlineHelpText>
    <label>CSC Info - Contact for Updates</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Division_Info1</relationshipName>
    <type>Lookup</type>
</CustomField>