force-app/main/default/objects/Operational_Data__c/fields/Cutting_Available__c.field-meta.xml
<CustomField>
    <fullName>Cutting_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cutting Available?</label>
    <type>Checkbox</type>
</CustomField>