force-app/main/default/objects/Operational_Data__c/fields/Cutting_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cutting_Comments__c</fullName>
    <label>Cutting Comments</label>
    <type>TextArea</type>
</CustomField>