force-app/main/default/objects/Operational_Data__c/fields/Cutting_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Cutting_Shifts__c</fullName>
    <label>Cutting Shift(s), if applicable</label>
    <length>30</length>
    <type>Text</type>
</CustomField>