force-app/main/default/objects/Operational_Data__c/fields/DeliveryRoute__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRoute__c</fullName>
    <defaultValue>&quot;http://uwtatlups03/ric/login.aspx&quot;</defaultValue>
    <label>Delivery Route Info</label>
    <type>Url</type>
</CustomField>