force-app/main/default/objects/Operational_Data__c/fields/Director_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Director_s_Phone__c</fullName>
    <formula>CSC_Director__r.Phone</formula>
    <label>CSC Manager Phone</label>
    <type>Text</type>
</CustomField>