force-app/main/default/objects/Operational_Data__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <referenceTo>Servicing_Division__c</referenceTo>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>