force-app/main/default/objects/Operational_Data__c/fields/DLOC_WMS__c.field-meta.xml
<CustomField>
    <fullName>DLOC_WMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DLOC</label>
    <type>Checkbox</type>
</CustomField>