force-app/main/default/objects/Operational_Data__c/fields/Field_Sales_Operations_Intranet_Page__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_Operations_Intranet_Page__c</fullName>
    <formula>&apos;http://myportal.veritiv.net/en-us/field-sales-operations/Pages/field-sales-operations.aspx&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Sales &amp; Operations Intranet Page</label>
    <type>Text</type>
</CustomField>