force-app/main/default/objects/Operational_Data__c/fields/Former_MAX_Division__c.field-meta.xml
<CustomField>
    <fullName>Former_MAX_Division__c</fullName>
    <description>Used as a reference for the old MAX Division Numbers for easy recognition</description>
    <label>Former Division</label>
    <length>30</length>
    <type>Text</type>
</CustomField>