force-app/main/default/objects/Operational_Data__c/fields/Group_Email_Box__c.field-meta.xml
<CustomField>
    <fullName>Group_Email_Box__c</fullName>
    <label>Group Email Box</label>
    <type>Email</type>
</CustomField>