force-app/main/default/objects/Operational_Data__c/fields/Group_Email_Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Group_Email_Distribution_List__c</fullName>
    <description>Used for the general group mailbox email address</description>
    <label>Group Email/Distribution List</label>
    <type>Email</type>
</CustomField>