force-app/main/default/objects/Operational_Data__c/fields/IB_Transfer_Cutoff_Time__c.field-meta.xml
<CustomField>
    <fullName>IB_Transfer_Cutoff_Time__c</fullName>
    <label>Transfer Cutoff Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12:00pm</fullName>
            </value>
            <value>
                <fullName>12:30pm</fullName>
            </value>
            <value>
                <fullName>01:00pm</fullName>
            </value>
            <value>
                <fullName>01:30pm</fullName>
            </value>
            <value>
                <fullName>02:30pm</fullName>
            </value>
            <value>
                <fullName>02:00pm</fullName>
            </value>
            <value>
                <fullName>03:00pm</fullName>
            </value>
            <value>
                <fullName>03:30pm</fullName>
            </value>
            <value>
                <fullName>04:00pm</fullName>
            </value>
            <value>
                <fullName>04:30pm</fullName>
            </value>
            <value>
                <fullName>05:00pm</fullName>
            </value>
            <value>
                <fullName>05:30pm</fullName>
            </value>
            <value>
                <fullName>06:00pm</fullName>
            </value>
            <value>
                <fullName>10:00am</fullName>
            </value>
            <value>
                <fullName>10:30am</fullName>
            </value>
            <value>
                <fullName>11:00am</fullName>
            </value>
            <value>
                <fullName>11:30am</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>