force-app/main/default/objects/Operational_Data__c/fields/Inventory_Control_Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Control_Group_Email__c</fullName>
    <description>Specific email address only for the Inventory Control team at the division location</description>
    <inlineHelpText>DL = Distribution List; If blank, look for Contact below.</inlineHelpText>
    <label>Inventory Control Group Email/DL</label>
    <type>Email</type>
</CustomField>