force-app/main/default/objects/Operational_Data__c/fields/Mill_Claims_Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Mill_Claims_Group_Email__c</fullName>
    <description>Email specific to the Mill Claims group only</description>
    <inlineHelpText>DL = Distribution List; If blank, look for Contact below.</inlineHelpText>
    <label>Mill Claims Group Email/DL</label>
    <type>Email</type>
</CustomField>