force-app/main/default/objects/Operational_Data__c/fields/Order_Entry_Cutoff_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Cutoff_Time__c</fullName>
    <label>Order Entry Cutoff Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4:00</fullName>
            </value>
            <value>
                <fullName>4:30</fullName>
            </value>
            <value>
                <fullName>5:00</fullName>
            </value>
            <value>
                <fullName>5:30</fullName>
            </value>
            <value>
                <fullName>6:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>