force-app/main/default/objects/Operational_Data__c/fields/Over_Short_Damaged_Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Over_Short_Damaged_Group_Email__c</fullName>
    <description>Email specific to Over, Short &amp; Damaged team</description>
    <inlineHelpText>DL = Distribution List; If blank, look for Contact below.</inlineHelpText>
    <label>Over, Short, &amp; Damaged Group Email/DL</label>
    <type>Email</type>
</CustomField>