force-app/main/default/objects/Operational_Data__c/fields/Receiving_Appointments__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Appointments__c</fullName>
    <label>Receiving Appointments</label>
    <type>Url</type>
</CustomField>