force-app/main/default/objects/Operational_Data__c/fields/Receiving_Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Group_Email__c</fullName>
    <description>Specifically for the Receiving Dept only</description>
    <inlineHelpText>DL = Distribution List; If blank, look for Contact below.</inlineHelpText>
    <label>Receiving Group Email/DL</label>
    <type>Email</type>
</CustomField>