force-app/main/default/objects/Operational_Data__c/fields/Receiving_Hours__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Hours__c</fullName>
    <label>Receiving Hours</label>
    <length>20</length>
    <type>Text</type>
</CustomField>