force-app/main/default/objects/Operational_Data__c/fields/Red_Prairie__c.field-meta.xml
<CustomField>
    <fullName>Red_Prairie__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track if Division uses</description>
    <label>Red Prairie</label>
    <type>Checkbox</type>
</CustomField>