force-app/main/default/objects/Operational_Data__c/fields/Slitting_Available__c.field-meta.xml
<CustomField>
    <fullName>Slitting_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slitting Available?</label>
    <type>Checkbox</type>
</CustomField>