force-app/main/default/objects/Operational_Data__c/fields/Slitting_Comments__c.field-meta.xml
<CustomField>
    <fullName>Slitting_Comments__c</fullName>
    <label>Slitting Comments</label>
    <type>TextArea</type>
</CustomField>