force-app/main/default/objects/Operational_Data__c/fields/Slitting_Shift_s_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Slitting_Shift_s_if_applicable__c</fullName>
    <label>Slitting Shift(s), if applicable</label>
    <length>30</length>
    <type>Text</type>
</CustomField>