force-app/main/default/objects/Operational_Data__c/fields/System_Code__c.field-meta.xml
<CustomField>
    <fullName>System_Code__c</fullName>
    <formula>Division__r.System_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Code</label>
    <type>Text</type>
</CustomField>