force-app/main/default/objects/Operational_Data__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Names of the Territories established by Veritiv.</description>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carolina</fullName>
            </value>
            <value>
                <fullName>Central PA</fullName>
            </value>
            <value>
                <fullName>Central Territory</fullName>
            </value>
            <value>
                <fullName>Chesapeake</fullName>
            </value>
            <value>
                <fullName>East Territory</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Heartland</fullName>
            </value>
            <value>
                <fullName>Metro Atlantic</fullName>
            </value>
            <value>
                <fullName>Midwest</fullName>
            </value>
            <value>
                <fullName>Nor Cal</fullName>
            </value>
            <value>
                <fullName>North Coast</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>North Plains</fullName>
            </value>
            <value>
                <fullName>Northwest</fullName>
            </value>
            <value>
                <fullName>Rocky Mountain</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>South Plains</fullName>
            </value>
            <value>
                <fullName>Southwest</fullName>
            </value>
            <value>
                <fullName>Tennessee</fullName>
            </value>
            <value>
                <fullName>Tri States</fullName>
            </value>
            <value>
                <fullName>West Central</fullName>
            </value>
            <value>
                <fullName>West Territory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>