force-app/main/default/objects/Operational_Data__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eastern</fullName>
                <default>true</default>
                <label>Eastern</label>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Pacific</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Hawaii-Aleutian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>