force-app/main/default/objects/Operational_Data__c/fields/Toll_Free_Number__c.field-meta.xml
<CustomField>
    <fullName>Toll_Free_Number__c</fullName>
    <label>Toll Free Number</label>
    <type>Phone</type>
</CustomField>