force-app/main/default/objects/Operational_Data__c/fields/Transfer_Cutoff_Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Cutoff_Group_Email__c</fullName>
    <description>Email specific to Transfer Cut off Group</description>
    <inlineHelpText>DL = Distribution List; If blank, look for Contact below.</inlineHelpText>
    <label>Transfer Cutoff Group Email/DL</label>
    <type>Email</type>
</CustomField>