force-app/main/default/objects/Operational_Data__c/fields/Warehouse_Fax__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>