force-app/main/default/objects/Operational_Data__c/fields/Warehouse_Hours_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Hours_of_Operation__c</fullName>
    <label>Hours of Operation</label>
    <length>12</length>
    <type>Text</type>
</CustomField>