force-app/main/default/objects/Operational_Data__c/fields/Warehouse_Size_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Size_sq_ft__c</fullName>
    <description>Field to enter the warehouse square footage</description>
    <inlineHelpText>Please enter the warehouse size in total square footage</inlineHelpText>
    <label>Warehouse Size (sq ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>