force-app/main/default/objects/Operational_Data__c/fields/Will_Call_Hours__c.field-meta.xml
<CustomField>
    <fullName>Will_Call_Hours__c</fullName>
    <description>Operations Admins will update the fields by division</description>
    <label>Will Call Hours</label>
    <type>TextArea</type>
</CustomField>