force-app/main/default/objects/Operational_Data__c/recordTypes/CSC.recordType-meta.xml
<RecordType>
    <fullName>CSC</fullName>
    <active>true</active>
    <label>CSC</label>
</RecordType>