force-app/main/default/objects/Operational_Data__c/listViews/CSC_Info.listView-meta.xml
<ListView>
    <fullName>CSC_Info</fullName>
    <columns>NAME</columns>
    <columns>Main_Phone_Number__c</columns>
    <columns>Toll_Free_Number__c</columns>
    <columns>After_Hours_Phone__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Office_Hours__c</columns>
    <columns>CSC_Director__c</columns>
    <columns>Director_s_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>CXC</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>USA</value>
    </filters>
    <label>USA - CXC</label>
</ListView>