force-app/main/default/objects/Operational_Data__c/listViews/Divisions_All.listView-meta.xml
<ListView>
    <fullName>Divisions_All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>System_Code__c</columns>
    <columns>Division_Code__c</columns>
    <columns>Division__c</columns>
    <columns>Former_MAX_Division__c</columns>
    <columns>Main_Phone_Number__c</columns>
    <columns>Toll_Free_Number__c</columns>
    <columns>Group_Email_Box__c</columns>
    <columns>Office_Hours__c</columns>
    <columns>After_Hours_Phone__c</columns>
    <columns>Time_Zone__c</columns>
    <filterScope>Everything</filterScope>
    <label>Divisions - All</label>
    <language>en_US</language>
</ListView>