force-app/main/default/objects/Operational_Data__c/listViews/Legacy_Vu_USA.listView-meta.xml
<ListView>
    <fullName>Legacy_Vu_USA</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Division__c</columns>
    <columns>Division_Code__c</columns>
    <columns>System_Code__c</columns>
    <columns>Former_MAX_Division__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>System_Code__c</field>
        <operation>contains</operation>
        <value>03,MA,NU,PC,VE</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Inactive</value>
    </filters>
    <label>VOS - All US Divisions</label>
    <language>en_US</language>
</ListView>