force-app/main/default/objects/Operational_Data__c/listViews/USA_Divisions.listView-meta.xml
<ListView>
    <fullName>USA_Divisions</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>System_Code__c</columns>
    <columns>Division_Code__c</columns>
    <columns>Former_MAX_Division__c</columns>
    <columns>Main_Phone_Number__c</columns>
    <columns>Toll_Free_Number__c</columns>
    <columns>After_Hours_Phone__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Office_Hours__c</columns>
    <columns>Order_Entry_Cutoff_Time__c</columns>
    <columns>IB_Transfer_Cutoff_Time__c</columns>
    <columns>LTL_Cutoff_Time__c</columns>
    <columns>Receiving_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>CSC</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>USA</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Inactive</value>
    </filters>
    <label>USA - Divisions</label>
    <language>en_US</language>
</ListView>