force-app/main/default/objects/Operational_Data__c/listViews/VOS_MA.listView-meta.xml
<ListView>
    <fullName>VOS_MA</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Division__c</columns>
    <columns>Division_Code__c</columns>
    <columns>System_Code__c</columns>
    <columns>Former_MAX_Division__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>System_Code__c</field>
        <operation>contains</operation>
        <value>MA</value>
    </filters>
    <label>VOS MA</label>
    <language>en_US</language>
</ListView>